[package]
name = "rustleet"
description = "Rust solutions for LeetCode problems"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello"
path = "bin/hello.rs"

[[bin]]
name = "guessing_game"
path = "bin/guessing_game.rs"

[[bin]]
name = "leetcode"
path = "bin/leetcode.rs"

# cargo run --release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
